# Automatic-Differential

./: .gitignore  README.md  network.py  reverseAD.py  test.py  utils.py
Cpp-Ver/: .gitignore  CMakeLists.txt  main.cpp
Cpp-Ver/src/: datatype.h  nn.h
Cpp-Ver/src/active_func/: sigmoid.h
Cpp-Ver/src/calculate/: cal_map.h
Cpp-Ver/src/layer/: linear.h
Cpp-Ver/src/loss/: cross_entropy.h
Cpp-Ver/src/node/: node.h
Cpp-Ver/src/operator/: basic_operator.h  operator.h  other_operator.h
Cpp-Ver/src/utils/: init_weights.h  read_data.h
